contentgrid-testcontainers-k3s-cilium/src/test/resources/com/contentgrid/testcontainers/k3s/customizer/ingress/test-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: test-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-ingress
  template:
    metadata:
      labels:
        app: test-ingress
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: test-ingress
spec:
  selector:
    app: test-ingress
  ports:
  - port: 80
    targetPort: http
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: test-ingress
spec:
  rules:
  - host: ingress.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-ingress
            port:
              name: http
