contentgrid-testcontainers-k3s-cilium/src/test/resources/com/contentgrid/testcontainers/k3s/customizer/ingress/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: whoami
spec:
  selector:
    app: whoami
  ports:
  - port: 80
    targetPort: http
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: whoami
spec:
  rules:
  - host: whoami.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              name: http
